# codex-bot

./: .gitignore  Cargo.toml  README.md  config.example.toml
crates/cli/: Cargo.toml
crates/cli/src/: claude.rs  codex.rs  lib.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: config.rs  lib.rs  main.rs  process.rs  telegram.rs
crates/daemon/src/manager/: mod.rs  server.rs
crates/frontend-common/: Cargo.toml
crates/frontend-common/src/: config_path.rs  event_loop.rs  handler.rs  lib.rs  reply.rs
crates/frontend-common/src/manager/: command.rs  event.rs  handler.rs  mod.rs  output.rs  state.rs
crates/frontend-common/src/worker/: command.rs  event.rs  handler.rs  mod.rs  output.rs  state.rs  stream.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: endpoint.rs  lib.rs  listener.rs  transport.rs
crates/rpc/src/data/: from_manager.rs  frontend_to_worker.rs  mod.rs  to_manager.rs  worker_to_frontend.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/telegram-frontend/: Cargo.toml
crates/telegram-frontend/src/: config.rs  listener.rs  main.rs  render.rs  telegram.rs
crates/telegram-frontend/tests/: worker_command_sync.rs
crates/test-orch/: Cargo.toml
crates/test-orch/src/: lib.rs
crates/test-orch/src/interact/: bot.rs  mod.rs  pty.rs
crates/test-orch/src/scenario/: cli.rs  command.rs  env.rs  expect.rs  mod.rs  runtime.rs  scenario.rs
crates/test-orch/tests/: pty.rs
crates/testing-frontend/: Cargo.toml
crates/testing-frontend/src/: listener.rs  main.rs  render.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  entrypoint.rs  event.rs  event_loop.rs  handler.rs  lib.rs  main.rs
crates/worker/src/frontend/: event.rs  handler.rs  listener.rs  mod.rs
crates/worker/tests/: worker_testing_frontend_cli_sync.rs
src/: account_cli.rs  accounts.rs  app.rs  codex.rs  config.rs  main.rs  state.rs  telegram.rs
src/codex/: exec.rs  review.rs
