[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
libc = "0.2"
parking_lot = "0.12"
portable-pty = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
vt100 = "0.16"
walkdir = "2.5"
session = { path = "../session" }
