[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
libc = "0.2"
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
uuid = { version = "1.18", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
frontend-common = { path = "../frontend-common" }
rpc = { path = "../rpc" }
session = { path = "../session" }

[dev-dependencies]
tempfile = "3.13"
