[package]
name = "telegram-frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "telegram-frontend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
frontend-common = { path = "../frontend-common" }
rpc = { path = "../rpc" }
session = { path = "../session" }

[dev-dependencies]
pty = { path = "../pty" }
tempfile = "3.15"
