[package]
name = "test-orch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
portable-pty = "0.8"
pty = { path = "../pty" }
tempfile = "3.20"
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
frontend-common = { path = "../frontend-common" }
rpc = { path = "../rpc" }
session = { path = "../session" }

[dev-dependencies]
