[package]
name = "testing-frontend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "testing-frontend"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
frontend-common = { path = "../frontend-common" }
rpc = { path = "../rpc" }
session = { path = "../session" }
