[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
cli = { path = "../cli" }
frontend-common = { path = "../frontend-common" }
walkdir = "2.5"
rpc = { path = "../rpc" }
session = { path = "../session" }

[dev-dependencies]
daemon = { path = "../daemon" }
pty = { path = "../pty" }
tempfile = "3.15"
uuid = { version = "1.18", features = ["v4", "serde"] }
